# rivers

./: .dockerignore  .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  justfile  mise.toml  mkdocs.yml  pyproject.toml  versions.json
.cargo/: config.toml
examples/package_demo/: README.md  pyproject.toml  rivers.toml
examples/package_demo/src/package_demo/: repository.py
python/: Cargo.toml  pyproject.toml
python/rivers/: __init__.py  _capture.py  _fan_out_helpers.py  cli.py  exceptions.py  resource.py  testing.py
python/rivers/_cli/: config.py
python/rivers/_core/: __init__.pyi
python/rivers/_core/assets/: __init__.pyi
python/rivers/_core/automation/: __init__.pyi
python/rivers/_core/exceptions/: __init__.pyi
python/rivers/cli/: __init__.py  config.py  scaffold.py
python/rivers/io_handlers/: __init__.py  base.py  memory.py  pickle.py
python/src/: completion_queue.rs  composition.rs  compute.rs  concurrency.rs  errors.rs  gil_threads.rs  grpc_server.rs  hooks.rs  job.rs  lib.rs  log_capture.rs  metadata.rs  net.rs  result_types.rs  retry.rs  runtime.rs  schema.rs  shutdown.rs  storage.rs  utils.rs
python/src/assets/: decorator.rs  dep_def.rs  external_asset.rs  graph_asset.rs  io_handler.rs  io_handler_registry.rs  mod.rs  multi_asset.rs  self_dependency.rs  single_asset.rs
python/src/automation/: condition.rs  mod.rs  schedule.rs  sensor.rs
python/src/backends/: local.rs
python/src/config/: mod.rs
python/src/context/: asset.rs  hook.rs  io.rs  mod.rs  schedule.rs  sensor.rs  task.rs
python/src/daemon/: automation_entry.rs  batch_writer.rs  dispatchers.rs  eval_dispatcher.rs  mod.rs  parse.rs  schedule.rs  sensors.rs  subdaemons.rs  subprocess_eval.rs  tick_processing.rs  types.rs
python/src/executor/: event_writer.rs  in_process.rs  kubernetes.rs  mod.rs  run_lifecycle.rs
python/src/partitions/: backfill_strategy.rs  context.rs  definition.rs  key.rs  key_range.rs  mapping.rs  mod.rs
python/src/repository/: mod.rs  resolved_node.rs
python/src/task/: bash_task.rs  mod.rs  py_task.rs
python/tests/: _helpers.py  _polling.py  conftest.py  test_integration.py
python/tests/assets/: test_asset_context.py  test_asset_creation.py  test_external_asset.py  test_graph_asset.py  test_multi_asset_deps.py  test_self_dependency.py
python/tests/backfill/: conftest.py  test_automation_backfill.py  test_backfill.py  test_backfill_graph_asset.py  test_backfill_multi_asset.py  test_backfill_priority.py  test_backfill_strategy.py  test_daemon_backfill.py
python/tests/cli/: conftest.py  test_cli_config.py  test_cli_dev.py
python/tests/concurrency/: test_cli_pools_queue.py  test_concurrency_claim.py  test_concurrency_events.py  test_concurrency_executor.py  test_concurrency_lease.py  test_concurrency_pools.py  test_daemon_concurrency.py
python/tests/core/: stubs.py  test_config_resources.py  test_hooks.py  test_io_handler_resolution.py  test_job.py  test_materialize_parity.py  test_metadata_value.py  test_result_types.py  test_schema.py  test_stubs.py  test_task.py  test_task_graph.py  test_type_checking.py  test_validation.py
python/tests/daemon/: test_automation.py  test_condition_dep_partitions.py  test_condition_eval_integration.py  test_condition_partition_universe.py  test_daemon.py  test_last_run_includes_target.py  test_run_queue.py  test_run_queue_integration.py  test_schedules.py  test_sensors.py  test_staleness.py
python/tests/executor/: test_async_execution.py  test_compute.py  test_error_propagation.py  test_executor.py  test_executor_fixes.py  test_fan_out.py  test_multi_asset_yield.py  test_parallel_worker.py  test_retry.py
python/tests/grpc_api/: test_grpc_partition_keys_info.py  test_grpc_server.py
python/tests/integration/: test_daemon_heavy.py  test_graceful_shutdown.py
python/tests/io_handlers/: helpers.py  test_default_io_handler.py  test_delta.py  test_delta_datafusion.py  test_delta_missing_deps.py  test_delta_pyspark.py  test_handler_common.py  test_job_integration.py  test_memory.py  test_pickle.py
python/tests/partitions/: test_deps_single_graph.py  test_dst_handling.py  test_dynamic_partitions.py  test_forkeys_subset_materialize.py  test_job_partition_compatibility.py  test_multi_dim_stress.py  test_named_partition_defs.py  test_partition_conditions.py  test_partition_context.py  test_partition_job.py  test_partition_key.py  test_partition_mapping.py  test_partition_mapping_materialize.py  test_partition_mapping_validation.py  test_partition_submit_validation.py  test_partitioned_cross_executor.py  test_partitioned_multi_graph.py  test_partitions_def.py
python/tests/storage/: test_storage_calls_in_assets.py  test_storage_integration.py
rust/rivers-core/: Cargo.toml
rust/rivers-core/src/: composition.rs  lib.rs  run_backend.rs  staleness.rs  task.rs  timegrid.rs  util.rs
rust/rivers-core/tests/: log_storage_bench.rs
rust/rivers-k8s/: Cargo.toml
rust/rivers-k8s/src/: classify.rs  compute.rs  defaults.rs  env.rs  executor.rs  lib.rs  resume.rs  run_backend.rs
rust/rivers-operator/: Cargo.toml
rust/rivers-operator/src/: leader.rs  main.rs  metrics.rs
rust/rivers-ui/: Cargo.toml  build.rs
rust/rivers-ui/src/: app.rs  code_location_registry.rs  favicon.rs  helpers.rs  lib.rs  live.rs  loc.rs  main.rs  now.rs  routes.rs  state.rs  synthetic.rs  types.rs
rust/rivers-ui/style/: components.css  detail-pages.css  dialogs.css  layout.css  panels.css  rivers-widgets.css  run-detail.css  runs-list.css  tokens.css
rust/rivers-ui/tests/: asset_stack_browser.rs  dag_browser.rs  dialog_success_browser.rs  eval_tree_browser.rs  event_timeline_browser.rs  execute_job_dialog_browser.rs  global_search_browser.rs  global_search_results_browser.rs  live_status_chip_browser.rs  loading_skeleton_browser.rs  location_switcher_browser.rs  materialize_dialog_browser.rs  metadata_renderer_browser.rs  multi_select_browser.rs  pagination_browser.rs  partition_picker_browser.rs  shell_browser.rs  status_badge_browser.rs  ui_kit_browser.rs  ui_kit_extended_browser.rs  ui_kit_router_browser.rs
(+722 files in other folders)
