[workspace]
members = ["python", "rust/rivers-core", "rust/rivers-api", "rust/rivers-ui", "rust/rivers-k8s", "rust/rivers-operator"]
exclude = []
resolver = "2"

[workspace.package]
version = "0.0.0-dev"
edition = "2024"
authors = ["Ion Koutsouris <ion@orchestration.rs>"]
license-file = "LICENSE"
repository = "https://github.com/ion-elgreco/rivers"
description = "Orchestration platform for tasks and assets fully backed by Rust"
keywords = ["rivers", "orchestrator", "pipelines", "assets", "tasks"]
rust-version = "1.91.0"

[workspace.dependencies]
anyhow = "1.0.100"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "tracing-log"] }

# Serde / data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
humantime = "2"
base64 = "0.22"
regex = "1"

# Async runtime
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
# `futures` umbrella is replaced at use sites with `futures-util` /
# `futures-core` for finer-grained incremental rebuilds. The umbrella entry
# below stays available for crates that need the full re-export surface.
futures = { version = "0.3", default-features = false }
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# gRPC stack
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-health = "0.14"
prost = "0.14"

# Kubernetes — direct subcrate deps instead of the `kube` umbrella so each
# member crate only pulls (and rebuilds) the layer it actually uses.
# `kube-client` defaults are `client + ring`; `rustls-tls` mirrors the old
# `kube` umbrella default.
kube-client = { version = "4.0", features = ["rustls-tls"] }
kube-runtime = "3.1"
kube-derive = "3.1"
kube-core = "3.1"
k8s-openapi = { version = "0.27", features = ["latest"] }
schemars = "1.0"

# HTTP / web
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
tower-http = "0.7"
reqwest = { version = "0.13", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Domain / misc
petgraph = "0.8.2"
croner = "3"
thiserror = "2"
once_cell = "1"

# Pin surrealdb to ion-elgreco's fork at the IndexBuilder Arc-cycle fix
# (https://github.com/ion-elgreco/surrealdb/tree/fix/index-builder-arc-cycle).
# Without it, every `DEFINE INDEX` permanently leaks the underlying
# Datastore (RocksDB / SurrealKV handles), which on `Storage.embedded()`
# tests piles up file descriptors and eventually hangs `Storage.embedded`.
[patch.crates-io]
surrealdb = { git = "https://github.com/ion-elgreco/surrealdb.git", rev = "f622ff397b691640f4f0395b8d96e8d4ac3ba1fc" }
surrealdb-core = { git = "https://github.com/ion-elgreco/surrealdb.git", rev = "f622ff397b691640f4f0395b8d96e8d4ac3ba1fc" }
surrealdb-types = { git = "https://github.com/ion-elgreco/surrealdb.git", rev = "f622ff397b691640f4f0395b8d96e8d4ac3ba1fc" }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"

# CI profile — fast cold-start builds with cache-friendly artifacts.
# Inherits dev so workspace crates compile cheaply, but disables
# incremental so sccache (which silently no-ops with CARGO_INCREMENTAL=1)
# can actually populate the cache. Dependencies are built at opt-level=3
# with debuginfo stripped so the cached `target/` blob stays small and
# tests run at near-release speed. Selected via `PROFILE=ci` in CI.
[profile.ci]
inherits = "dev"
debug = false
incremental = false

[profile.ci.package."*"]
opt-level = 3
debug = false
debug-assertions = false
strip = "debuginfo"
