[project]
name = "rivers-workspace"
version = "0.0.0"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["python"]

[dependency-groups]
dev = [
    # test & dev tooling
    "py-spy>=0.4.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "pyright>=1.1.409",
    "ruff>=0.15.12",
    "typos>=1.46.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "kr8s>=0.20",
]
