[project]
name = "rivers-workspace"
version = "0.0.0"
requires-python = ">=3.10"

[tool.uv.workspace]
members = [
    "python",
    "examples/package_demo",
]

[dependency-groups]
dev = [
    # test & dev tooling
    "py-spy>=0.4.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "pyright>=1.1.411",
    "ruff>=0.15.20",
    "typos>=1.48.0",
    "grpcio>=1.81.1",
    "grpcio-tools>=1.81.1",
    "kr8s>=0.20",
    "rumdl>=0.2.28",
]
