[package]
name = "rivers"
version.workspace = true
edition = "2024"
readme = "README.md"

[lib]
name = "rivers"
crate-type = ["cdylib"]

[dependencies]
rivers-core = { path = "../rust/rivers-core" }
rivers-ui = { path = "../rust/rivers-ui", features = ["ssr"] }
rivers-api = { path = "../rust/rivers-api" }
petgraph.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tonic-health.workspace = true
prost.workspace = true

pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py310", "chrono"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
pyo3-arrow = { version = "0.17", default-features = false }
arrow-schema = "58"
arrow-ipc = "58"
chrono.workspace = true
croner.workspace = true
url.workspace = true
rustls.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pyo3-pylogger = "0.5"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "signal"] }
tokio-stream.workspace = true
tokio-util.workspace = true
uuid.workspace = true
humantime.workspace = true
ordermap = "1"
rivers-k8s = { path = "../rust/rivers-k8s" }
# Direct kube subcrate dep — python only uses `kube_client::{Client, Api,
# api::PostParams, Error}`. Skipping `kube-runtime`/`kube-derive` here keeps
# them out of this crate's compile graph (rivers-k8s/operator still pull
# them where needed).
kube-client.workspace = true
k8s-openapi.workspace = true

[target.'cfg(not(target_os = "macos"))'.dependencies]
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }
