[project]
name = "package-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rivers",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
rivers = { workspace = true, editable = true }

[tool.rivers.module]
path = "package_demo.repository"
repo_var = "repo"

[tool.rivers.storage]
path = ".rivers/storage/"

[tool.rivers.server]
host = "127.0.0.1"
port = 3000
grpc_port = 3001

[tool.rivers.daemon]
no_daemon = false
