[package]
name = "rivers-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
croner.workspace = true
futures-util = { workspace = true }
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
surrealdb = { version = "3.1.0-alpha", default-features = false, features = ["kv-rocksdb", "kv-mem", "protocol-ws", "rustls"] }
tokio = { workspace = true, features = ["rt", "macros"] }
siphasher = "1"
tracing.workspace = true

[dev-dependencies]
test-temp-dir = "0.7"
