[package]
name = "rivers-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
ordermap = "1"
chrono.workspace = true
croner.workspace = true
futures-util = { workspace = true }
petgraph.workspace = true
refinery-core = { version = "0.9", default-features = false }
serde.workspace = true
serde_json.workspace = true
surrealdb = { version = "3.1.0-alpha", default-features = false, features = ["kv-rocksdb", "kv-mem", "protocol-ws", "rustls"] }
time = { version = "0.3", features = ["parsing", "formatting"] }
tokio = { workspace = true, features = ["rt", "macros", "time"] }
uuid.workspace = true
siphasher = "1"
tracing.workspace = true

[dev-dependencies]
test-temp-dir = "0.7"
