[package]
name = "rivers-ui"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:rivers-core",
    "dep:rivers-api",
    "dep:rivers-k8s",
    "dep:tonic",
    "dep:clap",
    "dep:anyhow",
    "dep:croner",
    "dep:cron-descriptor",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tokio-util",
    "dep:tower-http",
    "dep:futures-util",
    "dep:futures-core",
    "dep:base64",
]
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:wasm-logger",
    "dep:log",
    "dep:web-sys",
]
# CSR mode for browser-based component tests. Mutually exclusive with
# `ssr` and `hydrate`. Used by `wasm-pack test` against `tests/*.rs` to
# mount components into a fresh DOM without any prior SSR HTML.
csr = [
    "leptos/csr",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:web-sys",
]

[dependencies]
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono.workspace = true
ansi-to-html = "0.2"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }

# SSR-only dependencies
leptos_axum = { version = "0.8", optional = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "sync", "net", "io-util"], optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
rivers-core = { path = "../rivers-core", optional = true }
rivers-api = { path = "../rivers-api", optional = true }
rivers-k8s = { path = "../rivers-k8s", optional = true }
tonic = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
croner = { workspace = true, optional = true }
cron-descriptor = { version = "0.1", optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["compression-br", "compression-gzip"], optional = true }
futures-util = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

# Hydrate-only dependencies
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-logger = { version = "0.2", optional = true }
log = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = [
    "EventSource",
    "MessageEvent",
    # AbortController lets us detach the visibilitychange listener
    # registered by `use_live_kick` on component unmount. Without this,
    # the listener stays on `document` across navigations and can open
    # zombie EventSources for defunct pages — eventually saturating the
    # browser's per-origin HTTP/1.1 connection pool.
    "AbortController",
    "AbortSignal",
    "AddEventListenerOptions",
], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = "0.1"

# Brotli quality 11 of the 5 MB WASM bundle takes 2.5 min on a 0.5 vCPU
# pod and ~2 s per request via `CompressionLayer` — both unacceptable, so
# `build.rs` precompresses once on the host and `lib.rs` `include_bytes!`s
# the result.
[build-dependencies]
brotli = "8"

# Native (non-wasm) dev-deps. Tokio's `test-util` (for `start_paused = true`
# + `tokio::time::advance`) and `tokio-stream` are only needed by the
# channel_loop reconnect / code_location_registry tests; no production
# impact and they don't compile for wasm32.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tokio-stream = { workspace = true, features = ["net", "sync"] }

# Wasm-only dev-deps for browser-based component tests. The extra
# `web-sys` features here are needed by `tests/partition_picker_browser.rs`
# to query the DOM and dispatch events; production code goes through
# leptos and doesn't need them.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
# Used to await a yielded microtask between a synthetic click and the
# follow-up assertion — Leptos `Effect`s run on the next microtask, so
# the parent-owned `selected` signal isn't observable synchronously.
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Window",
    "MouseEvent",
    "MouseEventInit",
    "Event",
    "EventInit",
    "KeyboardEvent",
    "KeyboardEventInit",
    "Node",
    "NodeList",
    # `History` is needed by the router-context test helper to push the
    # browser URL to a specific `/locations/<ns>/<name>/...` path before
    # mounting components that read `use_current_location()`.
    "History",
    "Location",
    # `Response` / `Headers` lets the fetch-mock helper synthesize fake
    # responses for `window.fetch` so server-fn-driven UI paths can be
    # exercised without a backend.
    "Response",
    "ResponseInit",
    "Headers",
    "Request",
    "RequestInit",
] }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[bin]]
name = "rivers-ui"
required-features = ["ssr"]
